[package]
name = "libxdp-sys"
version = "0.3.0"
edition = "2024"
description = "Rust bindings for libxdp"
repository = "https://github.com/chenhengqi/libxdp-sys"
homepage = "https://github.com/chenhengqi/libxdp-sys"
keywords = ["libxdp", "xdp"]
authors = ["Hengqi Chen <hengqi.chen@gmail.com>", "Nathanial Lattimer <d0nut@resync.gg>", "Banyc <36535895+Banyc@users.noreply.github.com>"]
license = "LGPL-2.1 OR BSD-2-Clause"
build = "build.rs"
links = "libxdp"

[build-dependencies]
bindgen = "0.72"
pkg-config = "0.3"
xshell = "0.2.7"
